--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,4 @@
 <mat-toolbar>
-  <span>Employee Management</span>
+  <span class="font-toolbar">Employee Management</span>
+  <button mat-raised-button (click)="onLogout()">Logout</button>
 </mat-toolbar>
