--- a/src/app/pages/detail-employee/detail-employee.component.html
+++ b/src/app/pages/detail-employee/detail-employee.component.html
@@ -1,1 +1,31 @@
-<p>detail-employee works!</p>
+<app-header></app-header>
+<div class="container">
+  <mat-card class="container-card">
+    <mat-card-header>Employee Detail</mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <mat-list-item><strong>First Name:</strong> {{data.firstName}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><strong>Last Name:</strong> {{data.lastName}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><strong>Username:</strong> {{data.username}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><strong>Email:</strong> {{data.email}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><strong>Birth Date:</strong> {{data.birthDate|date}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><strong>Basic Salary:</strong> {{data.basicSalary|currency:"RP. ":"symbol"}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><strong>Group:</strong> {{data.group}}</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><strong>Description:</strong> {{data.description}}</mat-list-item>
+        <mat-divider></mat-divider>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-footer>
+      <button mat-raised-button color="primary" style="margin: 20px" (click)="onOK()"> OK</button>
+    </mat-card-footer>
+  </mat-card>
+</div>
+
+
