--- a/src/app/pages/employee/employee.component.html
+++ b/src/app/pages/employee/employee.component.html
@@ -1,1 +1,63 @@
-<p>employee works!</p>
+<app-header></app-header>
+<div class="container-row">
+  <button mat-raised-button color="primary" class="add-button" (click)="onAddEmployee()">Add Employee</button>
+  <mat-form-field class="form-search" appearance="outline">
+    <mat-label>Search Employee</mat-label>
+    <input matInput (keyup)="filterEmployee($event)" placeholder="Search" #input>
+  </mat-form-field>
+</div>
+
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
+      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="firstName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name</th>
+      <td mat-cell *matCellDef="let row"> {{row.firstName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name</th>
+      <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="birthDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Birth Date</th>
+      <td mat-cell *matCellDef="let row"> {{row.birthDate | date}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
+      <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="text-align: center"> Action</th>
+      <td mat-cell *matCellDef="let row" >
+        <button mat-icon-button color="primary" (click)="onDetailEmployee(row)">
+          <mat-icon>person</mat-icon>
+        </button>
+        <button mat-icon-button style="color: yellow" (click)="onEditEmployee()">
+          <mat-icon >edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="onDeleteEmployee(row.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4"> No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[10,30,50,70,100]" aria-label="Select page of users"></mat-paginator>
+</div>
