--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,66 @@
-<p>login works!</p>
+<section id="login" class="login">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card">
+          <div class="card-title">
+            <h3>Login Your Account</h3>
+          </div>
+          <div class="card-body">
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+              <div class="form-floating mb-3">
+                <input
+                  type="email"
+                  class="form-control {{ isFieldValid(field.EMAIL) }}"
+                  id="floatingInput"
+                  placeholder="name@example.com"
+                  formControlName="email"
+                />
+                <label for="floatingInput">Email address</label>
+                <app-validation-message
+                  [control]="loginForm.get(field.EMAIL)"
+                  [field]="field.EMAIL"
+                ></app-validation-message>
+              </div>
+              <div class="form-floating">
+                <input
+                  [type]="showPassword ? 'text' : 'password'"
+                  class="form-control {{ isFieldValid(field.PASSWORD) }}"
+                  id="floatingPassword"
+                  placeholder="Password"
+                  formControlName="password"
+                />
+                <label for="floatingPassword">Password</label>
+                <app-validation-message
+                  [control]="loginForm.get(field.PASSWORD)"
+                  [field]="field.PASSWORD"
+                ></app-validation-message>
+                <div class="mb-3 mt-2 form-check">
+                  <input
+                    type="checkbox"
+                    class="form-check-input"
+                    id="exampleCheck1"
+                    (click)="onShowPassword()"
+                  />
+                  <label class="form-check-label" for="exampleCheck1"
+                  >{{ showPassword ? "Hide" : "Show" }} Password</label
+                  >
+                </div>
+
+              </div>
+              <div class="d-grid gap-2 btn-login">
+                <button
+                  class="btn btn-outline-primary"
+                  type="submit"
+                  [disabled]="!loginForm.valid"
+                >
+                  LOGIN
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
